--- a/file.html
+++ b/file.html
@@ -67,6 +67,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Gallery</a></li>
+                <li><a href="#">Career</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
